[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
description = "Experiments on blue pill board"
name = "bluepill-tests"
version = "0.1.0-pre"

[dependencies]
cortex-m = "0.3.1"

[dependencies.cortex-m-rtfm]
version = "0.2.1"

[dependencies.cortex-m-rt]
version = "0.3.5"
features = ["abort-on-panic"]

[dependencies.stm32f103xx]
version = "0.7.5"
features = ["rt"]

[dependencies.lcd]
version = "0.2.1-alpha.0"
path = "../lcd"

[profile]

[profile.dev]
lto = true
opt-level = 1

[profile.release]
debug = false
lto = true
