[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "bluepill-tests"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-rtic = "0.5.3"
#cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f1 = { version = "0.11.0", features = ["stm32f103"] }

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[[bin]]
name = "bluepill-tests"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
